Fix invisible faq card bug on screens less than 992 width

--- a/css/style.css
+++ b/css/style.css
@@ -466,3 +466,8 @@ blockquote::after {
 	}
 }
 
+@media (min-width: 992px) {
+	.invisible-card {
+		visibility: hidden;
+	}
+}
